[package]
name = "ec"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aho-corasick = "1.1.3"
array2d = "0.3.2"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
http = "1.3.1"
intervallum = "1.4.4"
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
trie-rs = "0.4.2"
typenum = "1.18.0"

[dev-dependencies]
httptest = "0.16.3"
test-log = "0.2.18"
