[package]
name = "ec"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aho-corasick = "1.1.3"
array2d = "0.3.2"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
http = "1.3.1"
intervallum = "1.4.4"
itertools = "0.14.0"
log = "0.4.27"
num = "0.4.3"
permutations = "0.1.1"
petgraph = "0.8.2"
pretty-duration = "0.1.1"
pretty_env_logger = "0.5.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_millis = "0.1.1"
sorted-vec = "0.8.8"
toml = "0.9.5"
trie-rs = "0.4.2"
typenum = "1.18.0"
url = "2.5.4"
z3 = "0.14.2"

[dev-dependencies]
httptest = "0.16.3"
serde_json = "1.0.142"
test-log = "0.2.18"
